changed position to fixed so it doesnt jump around

--- a/infinite-scroll/src/front-end/src/components/style.css
+++ b/infinite-scroll/src/front-end/src/components/style.css
@@ -65,7 +65,7 @@
 }
 
 .movie-tool-tip {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 500px;
